// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfobarCustomerActions component should not render "merge" button because there is no customer to merge the selected customer with 1`] = `
<div
  class="float-right d-none d-md-block"
>
  <button
    aria-disabled="false"
    class="wrapper mr-2 fill secondary medium"
    id="confirm-1"
    type="button"
  >
    <span>
      Set as customer
    </span>
  </button>
</div>
`;

exports[`InfobarCustomerActions component should not render "set as customer" button because the agent is not on a ticket 1`] = `
<div
  class="float-right d-none d-md-block"
>
  <button
    aria-disabled="false"
    class="wrapper fill secondary medium"
    type="button"
  >
    <span>
      Merge
    </span>
  </button>
</div>
`;

exports[`InfobarCustomerActions component should not render "set as customer" nor "merge" buttons because the customers are the same 1`] = `
<div
  class="float-right d-none d-md-block"
/>
`;

exports[`InfobarCustomerActions component should render "set as customer" and "merge" button 1`] = `
<div
  class="float-right d-none d-md-block"
>
  <button
    aria-disabled="false"
    class="wrapper mr-2 fill secondary medium"
    id="confirm-2"
    type="button"
  >
    <span>
      Set as customer
    </span>
  </button>
  <button
    aria-disabled="false"
    class="wrapper fill secondary medium"
    type="button"
  >
    <span>
      Merge
    </span>
  </button>
</div>
`;
